--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
             'Weighted_Rating': z, 
             'PtPG': y, 
             'Player Name': name, 
-            Games, 
-            G, 
-            A, 
-            Pts, 
-            PPP, 
-            ShotsPG, 
-            HitsPG, 
-            BlocksPG 
+            'Games', 
+            'G', 
+            'A', 
+            'Pts', 
+            'PPP', 
+            'ShotsPG', 
+            'HitsPG', 
+            'BlocksPG' 
           } = point;
 
           // Adjust the scale for better visualization
