--- a/index.html
+++ b/index.html
@@ -1,128 +1,38 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>3D Scatterplot in VR</title>
-  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/aframe-physics-system@4.0.0/dist/aframe-physics-system.min.js"></script>
-</head>
-<body>
-  <a-scene physics>
-    <!-- Sky -->
-    <a-sky color="#000" radius="100"></a-sky>
-
-    <!-- Ground -->
-    <a-plane position="0 0 0" rotation="-90 0 0" width="100" height="100" color="#111" static-body></a-plane>
-
-    <!-- Axes -->
-    <a-entity>
-      <a-box position="5 0 0" width="10" height="0.05" depth="0.05" color="red"></a-box>
-      <a-text value="Completeness Rating" position="10.5 0.2 0" rotation="0 0 0" color="red"></a-text>
-
-      <a-box position="0 5 0" width="0.05" height="10" depth="0.05" color="green"></a-box>
-      <a-text value="PtPG" position="0 10.5 0.2" rotation="0 0 0" color="green"></a-text>
-
-      <a-box position="0 0 5" width="0.05" height="0.05" depth="10" color="blue"></a-box>
-      <a-text value="Weighted Rating" position="0.2 0 10.5" rotation="0 0 0" color="blue"></a-text>
-    </a-entity>
-
-    <!-- Data Points -->
-    <a-entity id="scatterplot" position="0 0 0"></a-entity>
-
-    <!-- Camera Rig -->
-    <a-entity id="cameraRig" position="0 1.6 10" movement-controls="fly: true">
-      <a-camera wasd-controls-enabled="false">
-        <a-cursor color="yellow"></a-cursor>
-      </a-camera>
-    </a-entity>
-
-    <!-- VR Controllers -->
-    <a-entity id="leftController" tracked-controls="controller: 0; hand: left" 
-              raycaster="objects: .hoverable; near: 0.1; far: 5" line="color: yellow; opacity: 0.75">
-    </a-entity>
-    <a-entity id="rightController" tracked-controls="controller: 1; hand: right" 
-              raycaster="objects: .hoverable; near: 0.1; far: 5" line="color: yellow; opacity: 0.75">
-    </a-entity>
-  </a-scene>
-
-  <script>
-    fetch('scatter_data.json')
-      .then(response => response.json())
-      .then(data => {
-        const scatterplot = document.getElementById('scatterplot');
-
-        data.forEach(point => {
-          const {
-            "Completeness Rating": x,
-            "Weighted_Rating": z,
-            "PtPG": y,
-            "Player Name": name,
-            "Games": games,
-            "G": goals,
-            "A": assists,
-            "Pts": points,
-            "PPP": ppp,
-            "ShotsPG": shotsPG,
-            "HitsPG": hitsPG,
-            "BlocksPG": blocksPG
-          } = point;
-
-          const scaledX = x / 10;
-          const scaledY = y * 5;
-          const scaledZ = z / 10;
-
-          const sphere = document.createElement('a-sphere');
-          sphere.setAttribute('position', `${scaledX} ${scaledY} ${scaledZ}`);
-          sphere.setAttribute('radius', 0.15); // Reduced radius
-          sphere.setAttribute('color', getColorFromMetric(y));
-          sphere.setAttribute('class', 'hoverable');
-          scatterplot.appendChild(sphere);
-
+          // Create tooltip for the datapoint
           const tooltip = document.createElement('a-text');
-          tooltip.setAttribute(
-            'value',
+          tooltip.setAttribute('value', 
             `Player: ${name}
 Completeness Rating: ${x.toFixed(1)}
 Weighted Rating: ${z.toFixed(1)}
-Points per Game (PtPG): ${y.toFixed(2)}
-Games: ${games}
-Goals: ${goals}
-Assists: ${assists}
-Points: ${points}
-Powerplay Points: ${ppp}
-Shots per Game: ${shotsPG}
-Hits per Game: ${hitsPG}
-Blocks per Game: ${blocksPG}`
+Points per Game (PtPG): ${y.toFixed(1)}
+Games: ${Games}
+Goals: ${G}
+Assists: ${A}
+Points: ${Pts}
+Powerplay Points: ${PPP}
+Shots per Game: ${ShotsPG}
+Hits per Game: ${HitsPG}
+Blocks per Game: ${BlocksPG}`
           );
-          tooltip.setAttribute('position', `0.3 0 0.3`); // Offset tooltip to appear next to the sphere
-          tooltip.setAttribute('align', 'left');
+
+          // Position the tooltip slightly to the side of the sphere
+          tooltip.setAttribute('position', `0.5 0 0`); // Adjust X for horizontal offset
+          tooltip.setAttribute('align', 'left'); // Align text to the left
           tooltip.setAttribute('scale', '0.5 0.5 0.5');
           tooltip.setAttribute('color', 'yellow');
           tooltip.setAttribute('visible', false);
           sphere.appendChild(tooltip);
 
-          sphere.addEventListener('raycaster-intersected', () => {
+          // Show and rotate tooltip to face the user dynamically
+          sphere.addEventListener('mouseenter', () => {
             tooltip.setAttribute('visible', true);
-
-            const camera = document.querySelector('a-camera').object3D;
-            const spherePosition = sphere.object3D.getWorldPosition(new THREE.Vector3());
-            const direction = camera.position.clone().sub(spherePosition).normalize();
+            const camera = document.querySelector('a-camera');
+            const cameraPosition = camera.object3D.position;
+            const spherePosition = sphere.object3D.position;
+            const direction = cameraPosition.clone().sub(spherePosition).normalize();
             const rotation = Math.atan2(direction.x, direction.z) * (180 / Math.PI);
             tooltip.setAttribute('rotation', `0 ${rotation} 0`);
           });
 
-          sphere.addEventListener('raycaster-intersected-cleared', () => {
-            tooltip.setAttribute('visible', false);
-          });
-        });
-      })
-      .catch(error => console.error('Error loading scatterplot data:', error));
-
-    function getColorFromMetric(ptpg) {
-      if (ptpg < 0.75) return 'blue';
-      if (ptpg <= 1.0) return 'yellow';
-      return 'green';
-    }
-  </script>
-</body>
-</html>
+          // Hide tooltip on mouse leave
+          sphere.addEventListener('mouseleave', () => tooltip.setAttribute('visible', false));
