--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
   <title>3D Scatterplot in VR</title>
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/aframe-physics-system@4.0.0/dist/aframe-physics-system.min.js"></script>
 </head>
 <body>
-  <a-scene>
+  <a-scene physics>
     <!-- Sky -->
-    <a-sky color="#000" radius="50"></a-sky>
+    <a-sky color="#000" radius="100"></a-sky>
+
+    <!-- Ground -->
+    <a-plane position="0 0 0" rotation="-90 0 0" width="100" height="100" color="#111" static-body></a-plane>
 
     <!-- Axes -->
     <a-entity>
@@ -24,63 +29,91 @@
     <!-- Data Points -->
     <a-entity id="scatterplot" position="0 0 0"></a-entity>
 
-    <!-- Camera -->
-    <a-camera position="0 5 20" wasd-controls="enabled: true" look-controls>
-      <a-cursor></a-cursor>
-    </a-camera>
+    <!-- Camera Rig -->
+    <a-entity id="cameraRig" position="0 1.6 10" movement-controls="fly: true">
+      <a-camera wasd-controls-enabled="false">
+        <a-cursor color="yellow"></a-cursor>
+      </a-camera>
+    </a-entity>
 
-    <!-- Controllers -->
-    <a-entity id="left-controller" hand-controls="hand: left" oculus-touch-controls>
-      <a-text id="left-controller-info" position="0 0.5 -0.5" align="center" color="yellow" scale="0.5 0.5 0.5"></a-text>
-    </a-entity>
-    <a-entity id="right-controller" hand-controls="hand: right" oculus-touch-controls>
-      <a-text id="right-controller-info" position="0 0.5 -0.5" align="center" color="yellow" scale="0.5 0.5 0.5"></a-text>
-    </a-entity>
+    <!-- VR Controllers -->
+    <a-entity id="leftController" tracked-controls="controller: 0; hand: left"></a-entity>
+    <a-entity id="rightController" laser-controls="hand: right" raycaster="objects: .hoverable" line="color: yellow; opacity: 0.75"></a-entity>
   </a-scene>
 
   <script>
-    const leftController = document.getElementById('left-controller');
-    const rightController = document.getElementById('right-controller');
-    const leftInfo = document.getElementById('left-controller-info');
-    const rightInfo = document.getElementById('right-controller-info');
+    fetch('scatter_data.json')
+      .then(response => response.json())
+      .then(data => {
+        const scatterplot = document.getElementById('scatterplot');
 
-    function updateControllerInfo() {
-      // Get the state of connected controllers
-      const gamepads = navigator.getGamepads();
+        data.forEach(point => {
+          const {
+            "Completeness Rating": x,
+            "Weighted_Rating": z,
+            "PtPG": y,
+            "Player Name": name,
+            "Games": games,
+            "G": goals,
+            "A": assists,
+            "Pts": points,
+            "PPP": ppp,
+            "ShotsPG": shotsPG,
+            "HitsPG": hitsPG,
+            "BlocksPG": blocksPG
+          } = point;
 
-      if (gamepads) {
-        const leftGamepad = gamepads.find(gp => gp && gp.hand === 'left');
-        const rightGamepad = gamepads.find(gp => gp && gp.hand === 'right');
+          const scaledX = x / 10;
+          const scaledY = y * 5;
+          const scaledZ = z / 10;
 
-        if (leftGamepad) {
-          leftInfo.setAttribute('value',
-            `Left Controller:
-Joystick X: ${leftGamepad.axes[0].toFixed(2)}
-Joystick Y: ${leftGamepad.axes[1].toFixed(2)}
-[Y] Button: ${leftGamepad.buttons[4].pressed}
-[X] Button: ${leftGamepad.buttons[3].pressed}
-Trigger: ${leftGamepad.buttons[0].pressed}
-Grip: ${leftGamepad.buttons[1].pressed}`
+          const sphere = document.createElement('a-sphere');
+          sphere.setAttribute('position', `${scaledX} ${scaledY} ${scaledZ}`);
+          sphere.setAttribute('radius', 0.2);
+          sphere.setAttribute('color', getColorFromMetric(y));
+          sphere.setAttribute('class', 'hoverable');
+          scatterplot.appendChild(sphere);
+
+          const tooltip = document.createElement('a-text');
+          tooltip.setAttribute(
+            'value',
+            `Player: ${name}
+Completeness Rating: ${x.toFixed(1)}
+Weighted Rating: ${z.toFixed(1)}
+Points per Game (PtPG): ${y.toFixed(2)}
+Games: ${games}
+Goals: ${goals}
+Assists: ${assists}
+Points: ${points}
+Powerplay Points: ${ppp}
+Shots per Game: ${shotsPG}
+Hits per Game: ${hitsPG}
+Blocks per Game: ${blocksPG}`
           );
-        }
+          tooltip.setAttribute('position', `0 0.5 0`);
+          tooltip.setAttribute('align', 'center');
+          tooltip.setAttribute('scale', '0.5 0.5 0.5');
+          tooltip.setAttribute('color', 'yellow');
+          tooltip.setAttribute('visible', false);
+          sphere.appendChild(tooltip);
 
-        if (rightGamepad) {
-          rightInfo.setAttribute('value',
-            `Right Controller:
-Joystick X: ${rightGamepad.axes[2].toFixed(2)}
-Joystick Y: ${rightGamepad.axes[3].toFixed(2)}
-[B] Button: ${rightGamepad.buttons[1].pressed}
-[A] Button: ${rightGamepad.buttons[0].pressed}
-Trigger: ${rightGamepad.buttons[0].pressed}
-Grip: ${rightGamepad.buttons[1].pressed}`
-          );
-        }
-      }
+          // Laser Pointer Interactions
+          sphere.addEventListener('raycaster-intersected', () => {
+            tooltip.setAttribute('visible', true);
+          });
 
-      requestAnimationFrame(updateControllerInfo);
+          sphere.addEventListener('raycaster-intersected-cleared', () => {
+            tooltip.setAttribute('visible', false);
+          });
+        });
+      })
+      .catch(error => console.error('Error loading scatterplot data:', error));
+
+    function getColorFromMetric(ptpg) {
+      if (ptpg < 0.75) return 'blue';
+      if (ptpg <= 1.0) return 'yellow';
+      return 'green';
     }
-
-    updateControllerInfo();
   </script>
 </body>
 </html>
