--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/aframe-physics-system@4.0.0/dist/aframe-physics-system.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/super-hands"></script>
 </head>
 <body>
-  <a-scene physics>
+  <a-scene physics vr-mode-ui="enabled: true" webxr="referenceSpaceType: local">
     <!-- Sky -->
     <a-sky color="#000" radius="100"></a-sky>
 
@@ -34,8 +35,22 @@
       <a-camera wasd-controls-enabled="false">
         <a-cursor color="yellow"></a-cursor>
       </a-camera>
-      <!-- Attach the right controller to the camera rig -->
-      <a-entity id="rightController" laser-controls="hand: right" raycaster="objects: .hoverable" line="color: yellow; opacity: 0.75"></a-entity>
+      <!-- Left Controller -->
+      <a-entity
+        id="leftController"
+        hand-controls="hand: left"
+        laser-controls="hand: left"
+        raycaster="objects: .hoverable"
+        line="color: cyan; opacity: 0.75">
+      </a-entity>
+      <!-- Right Controller -->
+      <a-entity
+        id="rightController"
+        hand-controls="hand: right"
+        laser-controls="hand: right"
+        raycaster="objects: .hoverable"
+        line="color: yellow; opacity: 0.75">
+      </a-entity>
     </a-entity>
   </a-scene>
 
@@ -88,16 +103,22 @@ Shots per Game: ${shotsPG}
 Hits per Game: ${hitsPG}
 Blocks per Game: ${blocksPG}`
           );
-          tooltip.setAttribute('position', `0 1 0`); // Position above the sphere
+          tooltip.setAttribute('position', `0.5 0 0.5`); // Position to the side
           tooltip.setAttribute('align', 'center');
           tooltip.setAttribute('scale', '0.5 0.5 0.5');
           tooltip.setAttribute('color', 'yellow');
           tooltip.setAttribute('visible', false);
           sphere.appendChild(tooltip);
 
-          // Laser Pointer Interactions
+          // Tooltip Interaction
           sphere.addEventListener('raycaster-intersected', () => {
             tooltip.setAttribute('visible', true);
+            const camera = document.querySelector('a-camera');
+            const cameraPosition = camera.object3D.position;
+            const spherePosition = sphere.object3D.position;
+            const direction = cameraPosition.clone().sub(spherePosition).normalize();
+            const rotation = Math.atan2(direction.x, direction.z) * (180 / Math.PI);
+            tooltip.setAttribute('rotation', `0 ${rotation} 0`);
           });
 
           sphere.addEventListener('raycaster-intersected-cleared', () => {
@@ -112,35 +133,6 @@ Blocks per Game: ${blocksPG}`
       if (ptpg <= 1.0) return 'yellow';
       return 'green';
     }
-
-    // Add right joystick pitch and yaw controls
-    document.addEventListener('gamepadconnected', () => {
-      const cameraRig = document.getElementById('cameraRig').object3D;
-
-      const updateControls = () => {
-        const gamepads = navigator.getGamepads();
-        const gp = gamepads[0]; // Assuming Oculus controller is the first gamepad
-
-        if (gp) {
-          // Left joystick: Movement
-          const moveX = gp.axes[0] * 0.2; // Horizontal (left/right)
-          const moveZ = gp.axes[1] * 0.2; // Vertical (forward/backward)
-          cameraRig.position.x -= moveX;
-          cameraRig.position.z += moveZ;
-
-          // Right joystick: Rotation (pitch and yaw)
-          const rotateY = gp.axes[2] * 0.05; // Horizontal (yaw)
-          const rotateX = gp.axes[3] * 0.05; // Vertical (pitch)
-          cameraRig.rotation.y -= rotateY; // Yaw rotation
-          cameraRig.rotation.x -= rotateX; // Pitch rotation
-          cameraRig.rotation.x = Math.max(Math.min(cameraRig.rotation.x, Math.PI / 2), -Math.PI / 2); // Clamp pitch
-        }
-
-        requestAnimationFrame(updateControls);
-      };
-
-      updateControls();
-    });
   </script>
 </body>
 </html>
