--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Camera Rig -->
     <a-entity id="cameraRig" position="0 1.6 10" movement-controls="fly: true">
       <a-camera wasd-controls-enabled="false">
-        <a-cursor color="yellow"></a-cursor>
+        <!-- Removed a-cursor to disable eye/headset tracking -->
       </a-camera>
       <!-- Left Controller -->
       <a-entity
@@ -133,6 +133,35 @@ Blocks per Game: ${blocksPG}`
       if (ptpg <= 1.0) return 'yellow';
       return 'green';
     }
+
+    // Right Joystick Pitch/Yaw Controls
+    document.addEventListener('gamepadconnected', () => {
+      const cameraRig = document.getElementById('cameraRig').object3D;
+
+      const updateControls = () => {
+        const gamepads = navigator.getGamepads();
+        const gp = gamepads[0]; // Assuming Oculus controller is the first gamepad
+
+        if (gp) {
+          // Left joystick: Movement
+          const moveX = gp.axes[0] * 0.2; // Horizontal (left/right)
+          const moveZ = gp.axes[1] * 0.2; // Vertical (forward/backward)
+          cameraRig.position.x -= moveX;
+          cameraRig.position.z += moveZ;
+
+          // Right joystick: Rotation (pitch and yaw)
+          const rotateY = gp.axes[2] * 0.05; // Horizontal (yaw)
+          const rotateX = gp.axes[3] * 0.05; // Vertical (pitch)
+          cameraRig.rotation.y -= rotateY; // Yaw rotation
+          cameraRig.rotation.x -= rotateX; // Pitch rotation
+          cameraRig.rotation.x = Math.max(Math.min(cameraRig.rotation.x, Math.PI / 2), -Math.PI / 2); // Clamp pitch
+        }
+
+        requestAnimationFrame(updateControls);
+      };
+
+      updateControls();
+    });
   </script>
 </body>
 </html>
