--- a/index.html
+++ b/index.html
@@ -31,25 +31,31 @@
     <a-entity id="scatterplot" position="0 0 0"></a-entity>
 
     <!-- Camera Rig -->
-    <a-entity id="cameraRig" position="0 1.6 10" movement-controls="fly: true">
-      <a-camera wasd-controls-enabled="false"></a-camera>
-      <!-- Left Controller (No Laser Pointer) -->
-      <a-entity
-        id="leftController"
-        hand-controls="hand: left">
-      </a-entity>
-      <!-- Right Controller with Laser Pointer -->
-      <a-entity
-        id="rightController"
-        hand-controls="hand: right"
-        laser-controls="hand: right"
-        raycaster="objects: .hoverable"
-        line="color: yellow; opacity: 0.75">
-      </a-entity>
+    <a-entity id="cameraRig" position="0 1.6 10">
+      <a-camera wasd-controls="enabled: false"></a-camera>
+    </a-entity>
+
+    <!-- Left Controller -->
+    <a-entity
+      id="leftController"
+      hand-controls="hand: left"
+      laser-controls="hand: left"
+      raycaster="objects: .hoverable"
+      line="color: cyan; opacity: 0.75">
+    </a-entity>
+
+    <!-- Right Controller -->
+    <a-entity
+      id="rightController"
+      hand-controls="hand: right"
+      laser-controls="hand: right"
+      raycaster="objects: .hoverable"
+      line="color: yellow; opacity: 0.75">
     </a-entity>
   </a-scene>
 
   <script>
+    // Load data and create scatterplot
     fetch('scatter_data.json')
       .then(response => response.json())
       .then(data => {
@@ -98,14 +104,14 @@ Shots per Game: ${shotsPG}
 Hits per Game: ${hitsPG}
 Blocks per Game: ${blocksPG}`
           );
-          tooltip.setAttribute('position', `0.5 0.5 0.5`);
+          tooltip.setAttribute('position', `0.5 0 0.5`); // Position tooltip to the side
           tooltip.setAttribute('align', 'center');
           tooltip.setAttribute('scale', '0.5 0.5 0.5');
           tooltip.setAttribute('color', 'yellow');
           tooltip.setAttribute('visible', false);
           sphere.appendChild(tooltip);
 
-          // Tooltip Interaction
+          // Tooltip interaction
           sphere.addEventListener('raycaster-intersected', () => {
             tooltip.setAttribute('visible', true);
           });
@@ -123,27 +129,29 @@ Blocks per Game: ${blocksPG}`
       return 'green';
     }
 
-    // Right Joystick Pitch/Yaw Controls
+    // Custom joystick handling
     document.addEventListener('gamepadconnected', () => {
       const cameraRig = document.getElementById('cameraRig').object3D;
 
       const updateControls = () => {
         const gamepads = navigator.getGamepads();
-        const gp = gamepads[0]; // Assuming Oculus controller is the first gamepad
+        const gp = gamepads[0]; // Assuming the first gamepad is the one in use
 
         if (gp) {
           // Left joystick: Movement
-          const moveX = gp.axes[0] * 0.2; // Horizontal (left/right)
-          const moveZ = gp.axes[1] * 0.2; // Vertical (forward/backward)
+          const moveX = gp.axes[0] * 0.2; // Horizontal movement
+          const moveZ = gp.axes[1] * 0.2; // Vertical movement
           cameraRig.position.x -= moveX;
           cameraRig.position.z += moveZ;
 
-          // Right joystick: Rotation (pitch and yaw)
-          const rotateY = gp.axes[2] * 0.05; // Horizontal (yaw)
-          const rotateX = gp.axes[3] * 0.05; // Vertical (pitch)
-          cameraRig.rotation.y -= rotateY; // Yaw rotation
-          cameraRig.rotation.x -= rotateX; // Pitch rotation
-          cameraRig.rotation.x = Math.max(Math.min(cameraRig.rotation.x, Math.PI / 2), -Math.PI / 2); // Clamp pitch
+          // Right joystick: Rotation
+          const rotateY = gp.axes[2] * 0.05; // Yaw (left/right rotation)
+          const rotateX = gp.axes[3] * 0.05; // Pitch (up/down rotation)
+          cameraRig.rotation.y -= rotateY; // Rotate yaw (y-axis)
+          cameraRig.rotation.x -= rotateX; // Rotate pitch (x-axis)
+
+          // Clamp pitch to prevent flipping
+          cameraRig.rotation.x = Math.max(Math.min(cameraRig.rotation.x, Math.PI / 2), -Math.PI / 2);
         }
 
         requestAnimationFrame(updateControls);
