--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a-entity id="scatterplot" position="0 0 0"></a-entity>
 
     <!-- Camera Rig -->
-    <a-entity id="cameraRig" position="0 1.6 10">
+    <a-entity id="cameraRig" position="0 1.6 10" movement-controls="fly: true">
       <a-camera wasd-controls="enabled: false"></a-camera>
     </a-entity>
 
@@ -41,7 +41,8 @@
       hand-controls="hand: left"
       laser-controls="hand: left"
       raycaster="objects: .hoverable"
-      line="color: cyan; opacity: 0.75">
+      line="color: cyan; opacity: 0.75"
+      position="0 1.5 -0.5">
     </a-entity>
 
     <!-- Right Controller -->
@@ -50,7 +51,8 @@
       hand-controls="hand: right"
       laser-controls="hand: right"
       raycaster="objects: .hoverable"
-      line="color: yellow; opacity: 0.75">
+      line="color: yellow; opacity: 0.75"
+      position="0 1.5 -0.5">
     </a-entity>
   </a-scene>
 
@@ -139,19 +141,19 @@ Blocks per Game: ${blocksPG}`
 
         if (gp) {
           // Left joystick: Movement
-          const moveX = gp.axes[0] * 0.2; // Horizontal movement
-          const moveZ = gp.axes[1] * 0.2; // Vertical movement
+          const moveX = gp.axes[0] * 0.2; // Strafe left/right
+          const moveZ = gp.axes[1] * 0.2; // Forward/backward
           cameraRig.position.x -= moveX;
           cameraRig.position.z += moveZ;
 
-          // Right joystick: Rotation
+          // Right joystick: Rotation (yaw and pitch)
           const rotateY = gp.axes[2] * 0.05; // Yaw (left/right rotation)
           const rotateX = gp.axes[3] * 0.05; // Pitch (up/down rotation)
-          cameraRig.rotation.y -= rotateY; // Rotate yaw (y-axis)
-          cameraRig.rotation.x -= rotateX; // Rotate pitch (x-axis)
-
-          // Clamp pitch to prevent flipping
-          cameraRig.rotation.x = Math.max(Math.min(cameraRig.rotation.x, Math.PI / 2), -Math.PI / 2);
+          cameraRig.rotation.y -= rotateY;
+          cameraRig.rotation.x = Math.max(
+            Math.min(cameraRig.rotation.x - rotateX, Math.PI / 2),
+            -Math.PI / 2
+          ); // Clamp pitch rotation
         }
 
         requestAnimationFrame(updateControls);
