--- a/index.html
+++ b/index.html
@@ -33,31 +33,31 @@
     <!-- Camera Rig -->
     <a-entity id="cameraRig" position="0 1.6 10">
       <a-camera wasd-controls="enabled: false"></a-camera>
-    </a-entity>
 
-    <!-- Left Controller -->
-    <a-entity
-      id="leftController"
-      hand-controls="hand: left"
-      laser-controls="hand: left"
-      raycaster="objects: .hoverable"
-      line="color: cyan; opacity: 0.75"
-      position="-0.2 1.6 -0.5">
-    </a-entity>
+      <!-- Left Controller -->
+      <a-entity
+        id="leftController"
+        hand-controls="hand: left"
+        laser-controls="hand: left"
+        raycaster="objects: .hoverable"
+        line="color: cyan; opacity: 0.75"
+        position="-0.2 0 -0.5">
+      </a-entity>
 
-    <!-- Right Controller -->
-    <a-entity
-      id="rightController"
-      hand-controls="hand: right"
-      laser-controls="hand: right"
-      raycaster="objects: .hoverable"
-      line="color: yellow; opacity: 0.75"
-      position="0.2 1.6 -0.5">
+      <!-- Right Controller -->
+      <a-entity
+        id="rightController"
+        hand-controls="hand: right"
+        laser-controls="hand: right"
+        raycaster="objects: .hoverable"
+        line="color: yellow; opacity: 0.75"
+        position="0.2 0 -0.5">
+      </a-entity>
     </a-entity>
   </a-scene>
 
   <script>
-    // Load data and create scatterplot
+    // Load scatterplot data
     fetch('scatter_data.json')
       .then(response => response.json())
       .then(data => {
@@ -106,7 +106,7 @@ Shots per Game: ${shotsPG}
 Hits per Game: ${hitsPG}
 Blocks per Game: ${blocksPG}`
           );
-          tooltip.setAttribute('position', `0.5 0 0.5`); // Position tooltip to the side
+          tooltip.setAttribute('position', `0.5 0 0.5`);
           tooltip.setAttribute('align', 'center');
           tooltip.setAttribute('scale', '0.5 0.5 0.5');
           tooltip.setAttribute('color', 'yellow');
@@ -131,29 +131,29 @@ Blocks per Game: ${blocksPG}`
       return 'green';
     }
 
-    // Custom Joystick handling for Camera Rig
+    // Custom joystick handling
     document.addEventListener('gamepadconnected', () => {
       const cameraRig = document.getElementById('cameraRig').object3D;
 
       const updateControls = () => {
         const gamepads = navigator.getGamepads();
-        const gp = gamepads[0]; // Assuming the first gamepad is in use
+        const gp = gamepads[0]; // Assuming the first gamepad is the one in use
 
         if (gp) {
           // Left joystick: Movement
-          const moveX = gp.axes[0] * 0.2; // Horizontal movement
-          const moveZ = gp.axes[1] * 0.2; // Forward/backward movement
+          const moveX = gp.axes[0] * 0.2;
+          const moveZ = gp.axes[1] * 0.2;
           cameraRig.position.x -= moveX;
           cameraRig.position.z += moveZ;
 
           // Right joystick: Rotation
           const rotateY = gp.axes[2] * 0.05; // Yaw (left/right rotation)
           const rotateX = gp.axes[3] * 0.05; // Pitch (up/down rotation)
-          cameraRig.rotation.y -= rotateY; // Rotate yaw (y-axis)
-          cameraRig.rotation.x -= rotateX; // Rotate pitch (x-axis)
-
-          // Clamp pitch
-          cameraRig.rotation.x = Math.max(Math.min(cameraRig.rotation.x, Math.PI / 2), -Math.PI / 2);
+          cameraRig.rotation.y -= rotateY;
+          cameraRig.rotation.x = Math.max(
+            Math.min(cameraRig.rotation.x - rotateX, Math.PI / 2),
+            -Math.PI / 2
+          ); // Clamp pitch
         }
 
         requestAnimationFrame(updateControls);
